--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ APP_DEBUG=true
 APP_LOG_LEVEL=info
 LOG_CHANNEL=daily
 LOG_DB_QUEUE=false
-LOG_DB_NAME='funded_logs'
+LOG_DB_NAME='logs_funded'
 TELESCOPE_ENABLED=false
 CLOCKWORK_ENABLE=false
 
@@ -35,7 +35,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=funded
 DB_USERNAME=root
-DB_PASSWORD=zxc40mNb
+DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
